2013-12-21  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: automake 1.14 wants an option subdir-objects

2013-12-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c src/graph3d.c src/show.c src/set.c src/unset.c
	src/save.c:  Reduce size of the AXIS structure.

2013-12-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/gp_hist.h src/history.c src/plot.c src/set.c
	src/show.c src/tables.c src/tables.h src/unset.c docs/gnuplot.doc:

	New command `set history` to control history output
	Syntax:
	    set history {size <N>} {quiet|numbers} {full|trim} {default}

	set history size N	replaces "set historysize N"
	set history size -1	replaces "unset historysize"
	set history quiet	subsequent `history` commands will not show numbers
	set history numbers	subsequent `history` commands will show numbers
	set history trim	[old default] remove duplicate history entries
	set history full	do not alter list by removing old duplicate entries
	set history default	equivalent to "set history size 500, numbers, trim"

2013-12-15  Jyrki Yli-Nokari  <jyrkiylinokari@gmail.com>

	* src/bitmap.c configure.in:
	Jyrki Yli-Nokari, the original author of the code in bitmap.c,
	has agreed to relicense it as dual license (gnuplot + BSD).
	This removes a restriction to non-commercial use imposed by the
	license terms that appeared in earlier versions of file bitmap.c.

2013-12-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/history.c src/gp_hist.h docs/gnuplot.doc:
	New: "history !N" reexecutes the command at history entry numbered N.
	The current entry ("history !...") in the history list is replaced
	with the command found by searching.

2013-12-12  Erik Olofsen  <olofsen@users.sf.net>

	* term/tek.trm:  New terminal driver "sixel" for old DEC terminals
	and printers, emulated by some versions of xterm.

2013-12-12  Ethan A Merritt  <merritt@u.washington.edu>
